# usm

./: .gitignore  .pre-commit-config.yaml  README.md  blobmount.sh  cu122.sh  init.sh  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
dev/: bump_version.py
docs/: architecture.md  development.md  index.md  installation.md
docs/commands/: bench.md  blobmount.md  builtin.md  clash.md  clip.md  cp.md  cu122.md  disk.md  git-auth.md  gpu.md  index.md  init.md  inject-alias.md  net.md  notify.md  openai-proxy.md  port.md  proxy.md  rsync.md  secret.md  serve.md  session.md  share.md  sysinfo.md  tunnel.md  wait.md
scripts/: _check_hashes.py  _config.json  bench.py  blobmount.sh  check_py.sh  clash.py  clip.py  cp.py  cu122.sh  disk.py  git_auth.py  gpu.py  init.py  init.sh  inject_alias.py  install.sh  net.py  notify.py  openai_proxy.py  port.py  proxy.py  rsync.py  secret.py  serve.py  session.py  share.py  sysinfo.sh  tunnel.py  versions.toml  wait.py
src/usmo/: __init__.py  cli.py  core.py  installer.py  manifest.py  registry.py  runner.py  state.py
src/usmo/cli/: __init__.py  app.py  autocheck.py  commands.py  output.py  presenters.py  runner.py
src/usmo/core/: __init__.py  aliases.py  catalog.py  constants.py  environments.py  errors.py  manifest.py  model.py  updates.py  version.py
tests/: conftest.py  test_cli.py  test_core_alias.py  test_core_autocheck.py  test_core_hash.py  test_core_script.py  test_cp.py  test_disk.py  test_git_auth.py  test_init.py  test_installer.py  test_manifest.py  test_net.py  test_openai_proxy.py  test_pyproject.py  test_registry.py  test_session.py  test_tunnel.py  test_venv.py
tools/: build_index.py
