[project]
name = "usmo"
dynamic = ["version"]
description = "Bootstrap machines and run cached utility scripts from one CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "packaging>=24.0",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "tomli>=2.0; python_version<'3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
usm = "usmo.cli:cli"

[project.urls]
Homepage = "https://github.com/HSPK/usm"
Repository = "https://github.com/HSPK/usm"
Issues = "https://github.com/HSPK/usm/issues"

[tool.uv]
package = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/usmo/_version.py"
