[project]
name = "usmo"
dynamic = ["version"]
description = "Bootstrap machines and run cached utility scripts from one CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
]

[project.scripts]
usm = "usmo.cli:cli"

[project.urls]
Homepage = "https://github.com/HSPK/usm"
Repository = "https://github.com/HSPK/usm"
Issues = "https://github.com/HSPK/usm/issues"

[dependency-groups]
# Installed by `uv sync` (the default group). Includes test infrastructure
# plus every runtime dep declared by scripts in scripts/_config.json so
# contributors can iterate on scripts via `usm --debug <cmd>` without
# uv-on-the-fly per invocation.
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "asgi-lifespan>=2.1.0",  # tests only: lets httpx.ASGITransport fire lifespan
    # Mirror of scripts/_config.json requirements (kept in sync manually).
    "azure-identity>=1.17.0",
    "cryptography>=42.0.0",
    "httpx[socks]>=0.27.0",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "starlette>=0.36.0",
    "uvicorn>=0.30.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/usmo/_version.py"
